--- a/src/WorldTravel.DbMigrator/appsettings.json
+++ b/src/WorldTravel.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True"
+    "Default": "Data Source=94.73.144.17;Initial Catalog=u1309514_dbABC; User Id=u1309514_userABC;Password=297232100889ABcd*;"
   },
   "IdentityServer": {
     "Clients": {
