--- a/src/WorldTravel.Web/appsettings.json
+++ b/src/WorldTravel.Web/appsettings.json
@@ -1,12 +1,17 @@
 ﻿{
   "App": {
-    "SelfUrl": "https://localhost:44355"
+    //"SelfUrl": "https://localhost:44355"
+    "SelfUrl": "http://worldvisaturkey.com"
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True"
+    //"Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True",
+    //"Default": "Server=94.73.144.17;Database=u1309514_dbABC;User Id=u1309514_userABC;297232100889ABcd*"
+    "Default": "Data Source=94.73.144.17;Initial Catalog=u1309514_dbABC; User Id=u1309514_userABC;Password=297232100889ABcd*;"
+
   },
   "AuthServer": {
-    "Authority": "https://localhost:44355",
+    //"Authority": "https://localhost:44355",
+    "Authority": "http://worldvisaturkey.com",
     "RequireHttpsMetadata": "false"
   },
   "StringEncryption": {
@@ -18,7 +23,8 @@
         "ClientId": "WorldTravel_App",
         "Scope": "WorldTravel",
         "ClientSecret": "Aa+!'*BDH423421",
-        "Address": "https://localhost:44355"
+        //"Address": "https://localhost:44355"
+        "Address": "http://worldvisaturkey.com"
       }
     }
   },
@@ -28,8 +34,8 @@
   "SmtpSettings": {
     "SmtpServer": "smtp.office365.com",
     "SmtpServerPort": "587",
-    "SmtpMailAddress": "its.numune@abdiibrahim.com.tr",
-    "SmtpPassword": "9mnWPGkc",
+    "SmtpMailAddress": "**",
+    "SmtpPassword": "****",
     "SmtpEnableSSL": "true",
     "SmtpUseDefaultCredentials": "false",
     "SmtpDisplayName": "ITS Numune LOCAL"
@@ -54,7 +60,7 @@
     //],
     "ToMailsForMailTemplates": [],
     "BccMailsForMailTemplates": [
-      "aozturk@nuevo.com.tr"
+      "**"
     ],
     //"UseLiveApi": false,
     "UseJobs": false
@@ -71,7 +77,7 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True",
+          "connectionString": "Data Source=94.73.144.17;Initial Catalog=u1309514_dbABC; User Id=u1309514_userABC;Password=297232100889ABcd*;",
           "tableName": "AppLogs"
         }
       }
