--- a/src/WorldTravel.Web/appsettings.json
+++ b/src/WorldTravel.Web/appsettings.json
@@ -1,17 +1,19 @@
 ﻿{
   "App": {
     //"SelfUrl": "https://localhost:44355"
-    "SelfUrl": "http://worldvisaturkey.com"
+    "SelfUrl": "http://demo.worldvisaturkey.com"
+    //"SelfUrl": "http://worldvisaturkey.com"
+
   },
   "ConnectionStrings": {
-    //"Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True",
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True"
     //"Default": "Server=94.73.144.17;Database=u1309514_dbABC;User Id=u1309514_userABC;297232100889ABcd*"
-    "Default": "Data Source=94.73.144.17;Initial Catalog=u1309514_dbABC; User Id=u1309514_userABC;Password=297232100889ABcd*;"
+    //"Default": "Data Source=94.73.144.17;Initial Catalog=u1309514_dbABC; User Id=u1309514_userABC;Password=297232100889ABcd*;"
 
   },
   "AuthServer": {
-    //"Authority": "https://localhost:44355",
-    "Authority": "http://worldvisaturkey.com",
+    "Authority": "https://localhost:44355",
+    //"Authority": "http://worldvisaturkey.com",
     "RequireHttpsMetadata": "false"
   },
   "StringEncryption": {
@@ -24,7 +26,8 @@
         "Scope": "WorldTravel",
         "ClientSecret": "Aa+!'*BDH423421",
         //"Address": "https://localhost:44355"
-        "Address": "http://worldvisaturkey.com"
+        "Address": "http://demo.worldvisaturkey.com/"
+        //"Address": "http://worldvisaturkey.com"
       }
     }
   },
@@ -77,7 +80,8 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Data Source=94.73.144.17;Initial Catalog=u1309514_dbABC; User Id=u1309514_userABC;Password=297232100889ABcd*;",
+          "connectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True",
+          //"connectionString": "Server=94.73.144.17;Database=u1309514_dbABC;User Id=u1309514_userABC;297232100889ABcd*",
           "tableName": "AppLogs"
         }
       }
