--- a/src/WorldTravel.Web/appsettings.json
+++ b/src/WorldTravel.Web/appsettings.json
@@ -6,9 +6,9 @@
 
   },
   "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True"
+    //"Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True"
     //"Default": "Server=94.73.144.17;Database=u1309514_dbABC;User Id=u1309514_userABC;297232100889ABcd*"
-    //"Default": "Data Source=94.73.144.17;Initial Catalog=u1309514_dbABC; User Id=u1309514_userABC;Password=297232100889ABcd*;"
+    "Default": "Data Source=94.73.144.17;Initial Catalog=u1309514_dbABC; User Id=u1309514_userABC;Password=297232100889ABcd*;"
 
   },
   "AuthServer": {
@@ -80,8 +80,8 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          "connectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True",
-          //"connectionString": "Server=94.73.144.17;Database=u1309514_dbABC;User Id=u1309514_userABC;297232100889ABcd*",
+          //"connectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True",
+          "connectionString": "Server=94.73.144.17;Database=u1309514_dbABC;User Id=u1309514_userABC;297232100889ABcd*",
           "tableName": "AppLogs"
         }
       }
