--- a/src/WorldTravel.Web/WorldTravel.Web.csproj
+++ b/src/WorldTravel.Web/WorldTravel.Web.csproj
@@ -100,6 +100,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\uploads\countrycontent\" />
+    <Folder Include="wwwroot\uploads\visatypecontent\" />
     <Folder Include="wwwroot\uploads\profile\" />
     <Folder Include="wwwroot\web\images\home\" />
   </ItemGroup>
