--- a/src/WorldTravel.Web/appsettings.secrets.json
+++ b/src/WorldTravel.Web/appsettings.secrets.json
@@ -1,19 +1,17 @@
 {
   "App": {
-    //"SelfUrl": "https://localhost:44355"
-    "SelfUrl": "http://demo.worldvisaturkey.com"
-    //"SelfUrl": "http://worldvisaturkey.com"
+    "SelfUrl": "https://localhost:44355"
+    //"SelfUrl": "https://worldvisaturkey.com"
 
   },
   "ConnectionStrings": {
-    //"Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True"
-    //"Default": "Server=94.73.144.17;Database=u1309514_dbABC;User Id=u1309514_userABC;297232100889ABcd*"
-    "Default": "Data Source=94.73.144.17;Initial Catalog=u1309514_dbABC; User Id=u1309514_userABC;Password=297232100889ABcd*;"
+    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True"
+    //"Default": "Data Source=94.73.144.17;Initial Catalog=u1309514_dbABC; User Id=u1309514_userABC;Password=297232100889ABcd*;"
 
   },
   "AuthServer": {
     "Authority": "https://localhost:44355",
-    //"Authority": "http://worldvisaturkey.com",
+    //"Authority": "https://worldvisaturkey.com",
     "RequireHttpsMetadata": "false"
   },
   "StringEncryption": {
@@ -25,9 +23,8 @@
         "ClientId": "WorldTravel_App",
         "Scope": "WorldTravel",
         "ClientSecret": "Aa+!'*BDH423421",
-        //"Address": "https://localhost:44355"
-        "Address": "http://demo.worldvisaturkey.com/"
-        //"Address": "http://worldvisaturkey.com"
+        "Address": "https://localhost:44355"
+        //"Address": "https://worldvisaturkey.com"
       }
     }
   },
@@ -56,10 +53,7 @@
     //"DeactivationWaitingCode": "407",
     "AutoResendExpressionMinute": "15",
     //"ToMailsForMailTemplates": [      
-    //  "onur.yildirim@abdiibrahim.com.tr",
-    //  "burak.natal@abdiibrahim.com.tr",
-    //  "mevlut.boztepe@abdiibrahim.com.tr",
-    //  "merve.musluk@abdiibrahim.com.tr"
+    //  "test@abdiibrahim.com.tr"
     //],
     "ToMailsForMailTemplates": [],
     "BccMailsForMailTemplates": [
@@ -80,8 +74,8 @@
       {
         "Name": "MSSqlServer",
         "Args": {
-          //"connectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True",
-          "connectionString": "Server=94.73.144.17;Database=u1309514_dbABC;User Id=u1309514_userABC;297232100889ABcd*",
+          "connectionString": "Server=(LocalDb)\\MSSQLLocalDB;Database=WorldTravel;Trusted_Connection=True",
+          //"connectionString": "Data Source=94.73.144.17;Initial Catalog=u1309514_dbABC; User Id=u1309514_userABC;Password=297232100889ABcd*;",
           "tableName": "AppLogs"
         }
       }
